# mnist

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  requirements_test.txt  t
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dummyproj/: cloudbuild.yaml  main.py
models/: model.pth
src/project1/: data.py  dataset.py  dataset_stats.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py  test_train.py
