[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project1"
version = "0.0.1"
description = "Classifying clothing using CNNs"
authors = [
  { name = "Martha Nybroe", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "project1.train:train"
evaluate = "project1.evaluate:evaluate"
